force-app/main/default/objects/LWCListColumn__mdt/LWCListColumn__mdt.object-meta.xml
<CustomObject>
    <label>LWC List Column</label>
    <pluralLabel>LWC List Columns</pluralLabel>
</CustomObject>