force-app/main/default/objects/LWCListColumn__mdt/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <label>ApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>