force-app/main/default/objects/LWCListColumn__mdt/fields/DataTableColumn__c.field-meta.xml
<CustomField>
    <fullName>DataTableColumn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this field if you want to display it as a column. 
Leave it blank if it&apos;s used for dml backend operations;</description>
    <label>DataTable Column</label>
    <type>Checkbox</type>
</CustomField>