force-app/main/default/objects/LWCListColumn__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>