force-app/main/default/objects/LWCListColumn__mdt/fields/LWCList__c.field-meta.xml
<CustomField>
    <fullName>LWCList__c</fullName>
    <label>LWC List</label>
    <referenceTo>LWCList__mdt</referenceTo>
    <relationshipLabel>LWC List Columns</relationshipLabel>
    <relationshipName>TBR_LWCListColumns</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>