force-app/main/default/objects/LWCListColumn__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Field to sort datatable columns.</description>
    <inlineHelpText>Leave it blank for non visible columns</inlineHelpText>
    <label>Ordre</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>