force-app/main/default/objects/LWCListColumn__mdt/fields/Searchable__c.field-meta.xml
<CustomField>
    <fullName>Searchable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Searchable</label>
    <type>Checkbox</type>
</CustomField>