force-app/main/default/objects/LWCListColumn__mdt/fields/Sortable__c.field-meta.xml
<CustomField>
    <fullName>Sortable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>