force-app/main/default/objects/LWCListColumn__mdt/fields/UrlField__c.field-meta.xml
<CustomField>
    <fullName>UrlField__c</fullName>
    <description>field to use when the url points to a related object&apos;s field.</description>
    <label>Url field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>