force-app/main/default/objects/LWCListColumn__mdt/fields/UrlObject__c.field-meta.xml
<CustomField>
    <fullName>UrlObject__c</fullName>
    <description>Field to describre which object is referenced by the link.</description>
    <label>Url Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>