force-app/main/default/objects/LWCListColumn__mdt/listViews/AllCustom.listView-meta.xml
<ListView>
    <fullName>AllCustom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ApiName__c</columns>
    <columns>Label__c</columns>
    <columns>Order__c</columns>
    <columns>Searchable__c</columns>
    <columns>Sortable__c</columns>
    <columns>LWCList__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllCustom</label>
    <language>en_US</language>
</ListView>